--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ button:hover{
 </head>
 
 <body>
-<button id="installBtn" class="install-btn">📲</button>
+<button id="installBtn" class="install-btn">📲Uygulamayı Yükleyin.</button>
 <div class="card">
   <div id="lockIcon" class="lock">🔐</div>
   <h2>Güvenli Giriş</h2>
@@ -320,3 +320,4 @@ if(isIOS){
 
 </body>
 </html>
+
