--- a/index.html
+++ b/index.html
@@ -160,23 +160,24 @@ button:hover{
 .install-btn{
   position: fixed;
   top: 12px;
-  right: 12px;
-  padding: 0;               /* padding sıfırlandı */
-  background: transparent;  /* arka plan kaldırıldı */
-  color: #38bdf8;           /* metin veya simge rengi */
-  font-size: 20px;          /* simgeyi büyüt */
+  left: 12px;
+  padding: 0;
+  background: transparent; /* tamamen şeffaf */
+  color: #38bdf8;          /* sadece emoji/metin görünür */
+  font-size: 20px;
   font-weight: 700;
-  border: none;             /* border kaldırıldı */
+  border: none;
   cursor: pointer;
-  z-index: 999;
+  z-index: 500;            /* ayarlar butonunun altında */
   display: none;
-  box-shadow: none;          /* gölge kaldırıldı */
+  pointer-events: auto;    /* tıklanabilir */
   transition: transform 0.2s ease, color 0.2s ease;
 }
 .install-btn:hover{
-  transform: scale(1.3);   /* hoverda büyüme efekti */
-  color: #22d3ee;          /* hover rengi */
+  transform: scale(1.2);
+  color: #22d3ee;
 }
+
 
 
 </style>
@@ -320,4 +321,5 @@ if(isIOS){
 
 </body>
 </html>
+
 
